--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@
     color: #FFFFFF;
 }
 .slide{
-    background: url("/images/image1.png") no-repeat center;
+    background: url("./../images/image1.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 541px;
@@ -84,7 +84,7 @@
 .squareFrame{
     width: 218px;
     height: 218px;
-    background: url("/images/image2.png");
+    background: url("./../images/image2.png");
 }
 .squareFigure{
     position: absolute;
@@ -105,7 +105,7 @@
     height: 102px;
 }
 .secondaryFrame{
-    background: url("/images/image3.png");
+    background: url("./../images/image3.png");
     width: 370px;
     height: 297px;
 }
@@ -174,7 +174,7 @@
     min-height: 170px;
 }
 .secondaryFrameV2Image{
-    background: url("/images/image4.png");
+    background: url("./../images/image4.png");
     width: 201px;
     height: 79px;
 }
